fix: wrapped trading socket cotainer for trading component

--- a/src/sass/_common/reskin.scss
+++ b/src/sass/_common/reskin.scss
@@ -10,10 +10,6 @@
     }
 }
 
-div.select-dropdown:after {
-    color: var(--component-textIcon-normal-prominent) !important;
-}
-
 .tab-explanation {
     display: flex;
     flex-direction: column;
